--- a/src/main/resources/config/values.yml
+++ b/src/main/resources/config/values.yml
@@ -1,11 +1,17 @@
+# server.yml
 server.serviceId: com.networknt.controller-1.0.0
 server.httpsPort: 8438
+
+# client.yml
+client.verifyHostname: false
+
+# kafka-producer.yml
 kafka-producer.transactional.id: T1001
 
 # access-control
 accessControl.enabled: false
 
-# service
+# service.yml
 service.singletons:
   # StartupHookProvider implementations, there are one to many and they are called in the same sequence defined.
   - com.networknt.server.StartupHookProvider:
@@ -18,4 +24,77 @@ service.singletons:
 #      - com.networknt.kafka.producer.SidecarProducer
 #  - io.confluent.kafka.schemaregistry.client.SchemaRegistryClient:
 #      - com.networknt.kafka.common.LightSchemaRegistryClient
+
+# handler.yml
+handler.handlers:
+  # Light-framework cross-cutting concerns implemented in the microservice
+  - com.networknt.exception.ExceptionHandler@exception
+  - com.networknt.metrics.MetricsHandler@metrics
+  - com.networknt.traceability.TraceabilityHandler@traceability
+  - com.networknt.correlation.CorrelationHandler@correlation
+  - com.networknt.openapi.OpenApiHandler@specification
+  - com.networknt.openapi.JwtVerifyHandler@security
+  - com.networknt.body.BodyHandler@body
+  - com.networknt.audit.AuditHandler@audit
+  # DumpHandler is to dump detail request/response info to log, useful for troubleshooting but not suggested to use in production due to it may lower the performance
+  # - com.networknt.dump.DumpHandler@dump
+  - com.networknt.sanitizer.SanitizerHandler@sanitizer
+  - com.networknt.openapi.ValidatorHandler@validator
+  # Customer business domain specific cross-cutting concerns handlers
+  # - com.example.validator.CustomizedValidator@custvalidator
+  # Framework endpoint handlers
+  - com.networknt.health.HealthGetHandler@health
+  - com.networknt.info.ServerInfoGetHandler@info
+  - com.networknt.chaos.KillappAssaultHandler@killapp
+  - com.networknt.chaos.LatencyAssaultHandler@latency
+  - com.networknt.chaos.MemoryAssaultHandler@memory
+  - com.networknt.chaos.ExceptionAssaultHandler@exchaos
+  - com.networknt.chaos.ChaosMonkeyGetHandler@chaosget
+  - com.networknt.chaos.ChaosMonkeyPostHandler@chaospost
+  - com.networknt.logging.handler.LoggerGetHandler@getLogger
+  - com.networknt.logging.handler.LoggerPostHandler@postLogger
+  - com.networknt.specification.SpecDisplayHandler@spec
+  - com.networknt.specification.SpecSwaggerUIHandler@swaggerui
+  - com.networknt.specification.FaviconHandler@favicon
+
+  # - com.networknt.metrics.prometheus.PrometheusGetHandler@getprometheus
+  # Business Middleware Handlers
+  - com.networknt.openapi.AccessControlHandler@access
+  # Business Handlers
+  - com.networknt.controller.handler.ServicesPostHandler
+  - com.networknt.controller.handler.ServicesDeleteHandler
+  - com.networknt.controller.handler.ServicesGetHandler
+  - com.networknt.controller.handler.ServicesLookupGetHandler
+  - com.networknt.controller.handler.ServicesCheckGetHandler
+  - com.networknt.controller.handler.ServicesCheckPutHandler
+  - com.networknt.controller.handler.ServicesCheckIdGetHandler
+  - com.networknt.controller.handler.ServicesInfoNodeGetHandler
+  - com.networknt.controller.handler.WebSocketHandler
+  - com.networknt.controller.handler.ServicesLoggerGetHandler
+  - com.networknt.controller.handler.ServicesLoggerPostHandler
+  - com.networknt.controller.handler.ServicesLoggerContentPostHandler
+  - com.networknt.controller.handler.ServicesChaosMonkeyGetHandler
+  - com.networknt.controller.handler.ServicesChaosMonkeyPostHandler
+  - com.networknt.controller.handler.ServicesChaosMonkeyAssaultPostHandler
+  - com.networknt.controller.handler.ServicesModuleGetHandler
+  - com.networknt.controller.handler.ServicesModulePostHandler
+  - com.networknt.controller.handler.ServicesShutdownPostHandler
+
+
+handler.chains.default:
+    - exception
+    - metrics
+    - traceability
+    - correlation
+    - killapp
+    - latency
+    - memory
+    - exchaos
+    - specification
+    - security
+    - body
+    - audit
+    - sanitizer
+    - validator
+    - access
 
