--- a/pom.xml
+++ b/pom.xml
@@ -424,6 +424,7 @@
                 <configuration>
                     <archive>
                         <manifest>
+                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                             <mainClass>${project.main.class}</mainClass>
                         </manifest>
                     </archive>
