--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,3 +1,3 @@
 FROM openjdk:11.0.3-slim
-ADD /target/controller.jar server.jar
+ADD /target/light-controller.jar server.jar
 CMD ["/bin/sh","-c","exec java -Dlight-4j-config-dir=/config -Dlogback.configurationFile=/config/logback.xml -jar /server.jar"]
